--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "c214_l1_todolist",
+  "name": "todolist",
   "version": "1.0.0",
-  "description": "Aula02",
+  "description": "Aula introdutoria sobre git",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "start:prod": "npm run build && node dist/index.js",
+    "build": "tsc",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.11.27",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
     "husky": "^9.0.11",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.3.3"
   }
 }
